--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="exercicios/desafio-tipo-objeto.js"></script>
     <script src="exercicios/desafio-associando-tipos.js"></script>
     <script src="ecmascript/ecmascript.js"></script>
+    <script src="exercicios/desafio-ecmascript.js"></script>
 </body>
 </html>
