--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="exercicios/desafio-associando-tipos.js"></script>
     <script src="ecmascript/ecmascript.js"></script>
     <script src="exercicios/desafio-ecmascript.js"></script>
+    <script srd="classes/classes.js"></script>
 </body>
 </html>
