--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <script src="ecmascript/ecmascript.js"></script>
     <script src="exercicios/desafio-ecmascript.js"></script>
     <script src="classes/classes.js"></script>
+    <script src="namespaces/namespaces.js"></script>
+
 </body>
 </html>
