--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script src="ecmascript/ecmascript.js"></script>
     <script src="exercicios/desafio-ecmascript.js"></script>
     <script src="classes/classes.js"></script>
+    <script src="namespaces/geometriaCirc.js"></script>
+    <script src="namespaces/geometriaRect.js"></script>
     <script src="namespaces/namespaces.js"></script>
-
 </body>
 </html>
